<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="com.example.navigationdrawer.ui.home.HomeFragment"
            android:label="@string/menu_home"
            android:textColor="@color/black"
            tools:layout="@layout/fragment_home"/>

<!--    <fragment-->
<!--            android:id="@+id/nav_gallery"-->
<!--            android:name="com.example.navigationdrawer.ui.gallery.GalleryFragment"-->
<!--            android:label="@string/menu_gallery"-->
<!--            tools:layout="@layout/fragment_gallery"/>-->

<!--    <fragment-->
<!--            android:id="@+id/nav_slideshow"-->
<!--            android:name="com.example.navigationdrawer.ui.slideshow.SlideshowFragment"-->
<!--            android:label="@string/menu_slideshow"-->
<!--            tools:layout="@layout/fragment_slideshow"/>-->

<!--<activity-->
<!--        android:id="@+id/nav_setting"-->
<!--        android:name="com.example.navigationdrawer.ui.setting.settingActivity"-->
<!--        android:label="@string/menu_setting"-->
<!--        tools:layout="@layout/activity_setting"/>-->
    <activity
            android:id="@+id/nav_setting"
            android:name="com.example.navigationdrawer.MainActivity2"
            android:label="@string/menu_setting"
            tools:layout="@layout/activity_setting"/>

    <activity
            android:id="@+id/nav_update"
            android:name="com.example.navigationdrawer.UpdateActivity"
            android:label="@string/menu_update"
            tools:layout="@layout/activity_update"/>

    <activity
            android:id="@+id/nav_delete"
            android:name="com.example.navigationdrawer.deleteActivity"
            android:label="@string/menu_delete"
            tools:layout="@layout/activity_delete"/>

    <activity
            android:id="@+id/nav_ShowAll"
            android:name="com.example.navigationdrawer.ShowUserActivity"
            android:label="@string/menu_show"
            tools:layout="@layout/activity_show_user2"/>


</navigation>